--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -40,9 +40,7 @@ dependencies:
   chewie: ^1.3.4
   video_player: ^2.4.5
   fijkplayer: ^0.11.0
-  bloc: ^8.0.0
-  flutter_bloc: ^8.0.0
-
+  get: ^4.6.6
 dev_dependencies:
   flutter_test:
     sdk: flutter
@@ -52,7 +50,7 @@ dev_dependencies:
   # activated in the `analysis_options.yaml` file located at the root of your
   # package. See that file for information about deactivating specific lint
   # rules and activating additional ones.
-  flutter_lints: ^2.0.0
+  flutter_lints: ^3.0.1
   
 
 # For information on the generic Dart part of this file, see the
